tests/snapshots/run_wpt_conformance__coreml_greater_float32_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater.https.any.js greater float32 3D tensors, coreml
 greater :: greater float32 3D tensors: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-5.394711494445801, -7.189248561859131, -3.1081764698028564, 4.977657318115234, 5.111654281616211, -1.5386580228805542, 1.414366364479065, -0.9362112283706664, -6.029961585998535, -3.0134198665618896, 0.170855313539505, 7.395327091217041, 7.178691864013672, -4.826237678527832, -2.020440101623535, -3.267888069152832, 8.944384574890137, -5.932100772857666, 0.7069857120513916, 2.7764203548431396, 0.978833794593811, -6.254901885986328, 4.409034729003906, -6.775286674499512]; inputB: [-6.155234336853027, -4.023341178894043, 5.9525980949401855, 2.306623697280884, -2.7692291736602783, -0.9711201190948486, 1.222206711769104, 4.590261459350586, 9.101232528686523, -4.997007846832275, -4.80729341506958, 8.919360160827637, 0.9005027413368225, -2.8414556980133057, -2.8280413150787354, 8.47984504699707, -7.84067964553833, 9.213960647583008, 4.982365131378174, -2.507319211959839, -4.518013954162598, 8.351094245910645, -6.161073207855225, 0.7364829182624817]
  expected output: [1, 0, 0, 1, 1, 0, 1, 0, 0, 1 ...] (len=24)
  actual output: [0, 0, 128, 63, 0, 0, 0, 0, 0, 0 ...] (len=24)
  expected output full nd:
[1, 0, 0, 1, 1, 0, 1, 0, 0, 1, ...] (len=24, shape=[2, 3, 4])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 3, 4])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 3, 4];
    inputB: f32[2, 3, 4];
  }

  nodes {
    [output] = greater(inputA, inputB, label="");
  }

  outputs { output; }
}
